# internal/types/types.go
@@ -1,0 +1,37 @@
+// Code generated by goctl. DO NOT EDIT.
+package types
+
+type LoginRequest struct {
+	Phone    string `form:"phone"`
+	Password string `form:"password"`
+}
+
+type JwtTokenResponse struct {
+	AccessToken string `json:"access_token"`
+	ExpireAt    int    `json:"expire_at"`
+}
+
+type RegisterRequest struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+	Phone    string `json:"phone"`
+	Email    string `json:"email"`
+}
+
+type RandomRequest struct {
+	HotNum  int `form:"hot_num"`
+	ColdNum int `form:"cold_num"`
+	SoupNum int `form:"soup_num"`
+}
+
+type RandomResponse struct {
+	Foods     []FoodResponse `json:"foods"`
+	Materials []string       `json:"materials"` //总配料
+}
+
+type FoodResponse struct {
+	ID       uint     `json:"id"`
+	Name     string   `json:"name"`
+	Material []string `json:"material"`
+	Status   int      `json:"status"`
+}
